# cpp_templates

./: CMakeLists.txt  README.md
cpp_templates_the_complete_guide/: CMakeLists.txt  chapter11_generic_libraries.cpp  chapter19_implementing_traits.cpp  chapter19_implementing_traits.hpp  chapter20_overloading_on_type_properties.cpp  chapter20_overloading_on_type_properties.hpp  chapter21_templates_and_inheritance.cpp  chapter21_templates_and_inheritance.hpp  chapter22_bridging_static_and_dynamic_polymorphism.cpp  chapter23_metaprogramming.cpp  chapter23_metaprogramming.hpp  chapter24_typelists.cpp  chapter24_typelists.hpp  chapter4_variadic_templates.cpp  chapter5_tricky_basics.cpp  chapter5_tricky_basics.hpp  chapter6_enable_if.cpp  chapter8_compile_time_programming.cpp
exceptional_cpp/: CMakeLists.txt  case_insensitive_string.cpp  case_insensitive_string.hpp  class_mechanics.cpp  class_mechanics.hpp
include/: chapter11_generic_libraries.hpp  chapter19_implementing_traits.hpp  chapter20_overloading_on_type_properties.hpp  chapter21_templates_and_inheritance.hpp  chapter22_bridging_static_and_dynamic_polymorphism.hpp  chapter23_metaprogramming.hpp  chapter4_variadic_templates.hpp  chapter5_tricky_basics.hpp  chapter6_enable_if.hpp  chapter8_compile_time_programming.hpp  variadic_templates.hpp
modern_cpp_design/: CMakeLists.txt
src/: CMakeLists.txt  chapter11_generic_libraries.cpp  chapter19_implementing_traits.cpp  chapter20_overloading_on_type_properties.cpp  chapter21_templates_and_inheritance.cpp  chapter22_bridging_static_and_dynamic_polymorphism.cpp  chapter23_metaprogramming.cpp  chapter4_variadic_templates.cpp  chapter5_tricky_basics.cpp  chapter6_enable_if.cpp  chapter8_compile_time_programming.cpp  variadic_templates.cpp
